# minesweeper

./: CMakeLists.txt  README.md  main.cpp
src/: board.cpp  board.h  cell.cpp  cell.h  colors.h  main.cpp  statusbar.cpp  statusbar.h
